--- a/api/templates/blockchains.html
+++ b/api/templates/blockchains.html
@@ -66,12 +66,12 @@
                 <div class="col-12">
                     <nav class="navbar">
                         <div class="col-1 d-flex">
-                            <a href="/">
+                            <a href="/landing">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/OpenSea_icon.svg/2048px-OpenSea_icon.svg.png"
                                     height="40px" width="40px">
                             </a>
                             <div class="col-1 pt-2 px-2">
-                                <a href="/" class="text-decoration-none">
+                                <a href="/landing" class="text-decoration-none">
                                     <h5 class="blanco">OpenSea</h5>
                                 </a>
                             </div>
@@ -111,8 +111,8 @@
                             <i class="fa-solid fa-caret-left fa-4x azul"></i>
                         </a>
                     </div>
-                    <div class="col-2 pt-4">
-                        <h6>Volver al perfil </h6>
+                    <div class="col-4 pt-3">
+                        <h5>Volver al perfil</h5>
                     </div>
                 </div>
                 <div class="col-4 text-center py-5">
