--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -63,16 +63,10 @@
                 <div class="col-6">
                     <h2 class="azul">Iniciar sesión</h2>
                     <hr>
-                    <label for="exampleFormControlInput1" class="form-label">
-                        <h6>Email</h6>
+                    <h6>Nombre de usuario / Email</h6>
                     </label>
                     <input type="#" class="form-control negro blanco" id="exampleFormControlInput1"
-                        placeholder="example@gmail.com" name="email">
-                    <label for="exampleFormControlInput1 negro" class="form-label pt-3">
-                        <h6>Nombre de usuario</h6>
-                    </label>
-                    <input type="#" class="form-control negro blanco" id="exampleFormControlInput1"
-                        placeholder="example: Darth_Vader" name="userName">
+                        placeholder="Darth Vader" name="userName">
                     <label for="exampleFormControlInput1" class="form-label pt-3">
                         <h6>Contraseña</h6>
                     </label>
@@ -80,7 +74,7 @@
                         placeholder="********" name="password">
                     <div class="col py-3 text-center">
                         <div class="col text-center pt-2 pb-2">
-                            <a href="#" class="text-decoration-none">
+                            <a href="/password/recuperation" class="text-decoration-none">
                                 <h6 class="azul">¿Olvidaste la contraseña?</h6>
                             </a>
                         </div>
