--- a/api/templates/password_recuperation.html
+++ b/api/templates/password_recuperation.html
@@ -43,9 +43,24 @@
         .dark-blue {
             background-color: rgb(4 17 29);
         }
+
+        .circular--landscape {
+            display: inline-block;
+            position: relative;
+            width: 460px;
+            height: 460px;
+            overflow: hidden;
+            border-radius: 50%;
+        }
+
+        .circular--landscape img {
+            width: auto;
+            height: 100%;
+            margin-left: -150px;
+        }
     </style>
 
-    <title>Subasta | OpenSea</title>
+    <title>Recuperación | OpenSea</title>
 </head>
 
 <body>
@@ -55,109 +70,50 @@
                 <div class="col-12">
                     <nav class="navbar">
                         <div class="col-1 d-flex">
-                            <a href="/landing">
+                            <a href="/">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/OpenSea_icon.svg/2048px-OpenSea_icon.svg.png"
                                     height="40px" width="40px">
                             </a>
                             <div class="col-1 pt-2 px-2">
-                                <a href="/landing" class="text-decoration-none">
+                                <a href="/" class="text-decoration-none">
                                     <h5 class="blanco">OpenSea</h5>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-1"></div>
-                        <div class="col-4">
-                            <input class="form-control me-2 negro blanco" type="search"
-                                placeholder="Buscar artículos, colecciones y cuentas" aria-label="Search">
-                        </div>
-                        <a class="navbar-brand pt-2" href="/landing">
-                            <h6 class="blanco">Explorar</h6>
-                        </a>
-                        <a class="navbar-brand pt-2" href="#">
-                            <h6 class="blanco">Drops</h6>
-                        </a>
-                        <a class="navbar-brand pt-2" href="#">
-                            <h6 class="blanco">Estadísticas</h6>
-                        </a>
-                        <a class="navbar-brand pt-2" href="#">
-                            <h6 class="blanco">Recursos</h6>
-                        </a>
-                        <a href="/signin" class="text-decoration-none">
-                            <i class="fa-regular fa-user fa-2x blanco"></i>
-                        </a>
-                        <i class="fa-solid fa-wallet fa-2x"></i>
-                        <i class="fa-solid fa-cart-shopping fa-2x"></i>
-                        <form action="/logout">
-                            <button class="btn fa-solid fa-power-off fa-2x blanco" type="submit" name="logout"></button>
-                        </form>
                     </nav>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4 py-5 d-flex px-4">
-                    <div class="col-1 ">
-                        <a href="/nft/details/{{nft['_id']}}" class="text-decoration-none">
-                            <i class="fa-solid fa-caret-left fa-4x azul"></i>
-                        </a>
-                    </div>
-                    <div class="col-3 pt-4">
-                        <h6>Volver al NFT</h6>
+            {% if mensaje1 %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-danger" role="alert">
+                            {{mensaje1}}
+                        </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="div text-center py-3">
-                        <h2 class="azul">Resultado de la Subasta</h2>
-                        <h3>Ganador</h3>
+            </div>
+            {% endif %}
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4 text-center">
+                    <h3 class="azul">¿Olvidaste tu contraseña?</h3>
+                    <br>
+                    <div class="circular--landscape">
+                        <img
+                            src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTdkYWMwMGIyMjU4YWVmMjYzNTU3NzQ3Mjk2YWM3ZGFmY2YyZThiOCZjdD1n/MIs9GhWdrgLjq/giphy.gif">
                     </div>
-                    <table class="table blanco gris cuadrados" style="border-radius: 0.5rem;">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col" class="text-center">NFT</th>
-                                <th scope="col" class="text-center">Usuario</th>
-                                <th scope="col" class="text-center">Monto</th>
-                                <th scope="col" class="text-center">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="pt-3 text-center">1</th>
-                                <td class="pt-3 text-center">{{bestOffer['name']}}</td>
-                                <td class="pt-3 azul text-center">{{bestOffer['user_id']['user']}}</td>
-                                <!-- Condiciones de mayor y menor porcentaje / generación de diferencia de color -->
-                                {% if bestOffer['price'] > nft['listed']['auction_amount'] %}
-                                <td class="pt-3 text-center">{{bestOffer['price']}} $MFC <small
-                                        class="text-success">(+{{(resultado_porcentaje | int)}}%)</small>
-                                    <h6 class="azul">[{{nft['listed']['auction_amount']}}]
-                                        $MFC</h6>
-                                </td>
-                                {% endif %}
-
-                                {% if bestOffer['price'] < nft['listed']['auction_amount'] %} <td
-                                    class="pt-3 text-center">
-                                    {{bestOffer['price']}} $MFC <small class="text-danger">(-{{(resultado_porcentaje |
-                                        int)}}%)</small>
-                                    <h6 class="azul">[{{nft['listed']['auction_amount']}}]
-                                        $MFC</h6>
-                                    </td>
-                                    {% endif %}
-
-                                    {% if bestOffer['price'] == nft['listed']['auction_amount'] %} <td
-                                        class="pt-3 text-center">
-                                        {{bestOffer['price']}} $MFC <small class="text-warning">({{(resultado_porcentaje
-                                            | int)}}%)</small>
-                                        ==<h6 class="azul">[{{nft['listed']['auction_amount']}}]
-                                            $MFC</h6>
-                                    </td>
-                                    {% endif %}
-
-                                    <td class="text-center">
-                                        <a href="/transfer/nft/action/{{bestOffer['_id']}}"
-                                            class="btn btn-primary">Transferir</a>
-                                    </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <hr>
+                    <p>Tranquilo/a escribe tu dirección de email y enviaremos un mensaje de recuperación.</p>
+                    <label for="exampleFormControlInput1" class="form-label">
+                        <h6 class="azul">Email* (sin espacios ni carácteres especiales)</h6>
+                    </label>
+                    <form class="d-flex" action="/send/password/code">
+                        <!--form-control me-5 sirve para definir la distancia derecha del input con bootstrap-->
+                        <input type="email" class="form-control me-5" id="exampleFormControlInput1"
+                            placeholder="example@gmail.com" name="email">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
                 </div>
                 <div class="col-4"></div>
             </div>
