--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -88,54 +88,50 @@
                 </div>
             </div>
             <div class="row py-5">
-                <div class="col text-center">
+                <div class="col-12 text-center pb-5">
                     <h1>Explorar, coleccionar y vender NFT</h1>
+                    <h3 style="color:rgb(116, 180, 244)">Gana comisiones por cada item</h3>
+                    <h5 class="azul">Publica tu arte sin restricciones</h5>
                 </div>
-                <!--  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner" style="border-radius: 1rem;">
+                            <div class="carousel-item active">
+                                <img src="https://rare-gallery.com/mocahbig/69946-Batman-DC-Comics-Terry-McGinnisBatman-Beyond-HD-Wallpaper.jpg"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://cdn.dribbble.com/users/116983/screenshots/16738624/media/9de0d2c35305956ff12b0a2f571217eb.gif"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://wywl-gifs.weebly.com/uploads/1/2/2/3/1223250/bb3.png"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://i.seadn.io/gae/u3dsZAMHTKmv_kufJ2myOspmEY16YPrPybPJ4gw_6fyz2RWzzkpFhaMQjVLhsp51VUuDF5WHHZ-8SM7uYeVVP05RBPxl15UcQl8Lf3c?auto=format&w=1920"
-                                class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item active">
-                            <img src="" class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item active">
-                            <img src="" class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div> -->
-                <!-- Modal -->
+                </div>
+                <div class="col-1"></div>
+
             </div>
             <div class="row">
                 <div class="col-2">
@@ -196,13 +192,35 @@
                 </div>
                 <div class="col-1"></div>
                 {% endfor %}
-                <hr>
             </div>
-
             <div class="row">
-                <div class="col">
+                <hr>
+                <div class="col-12 pb-2">
                     <h3>Buscar por categoría</h3>
                 </div>
+                <hr>
+                <h4>▶ Ánime</h4>
+                {% for n in nfts %}
+                {% if 'listed' in nfts and n['listed']['category'] == 'Anime'%}
+                <div class="col-2 py-2">
+                    <div class="card"
+                        style="width: 15rem; background-color: rgb(53 56 64); border-radius: 1rem; bottom:-0.5rem; left: 3rem; padding: 0.5rem;">
+                        <a href="/nft/details/{{n['_id']}}" class="text-decoration-none">
+                            <img src="{{n['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
+                            <div class="card-body">
+                                <h6 class="card-title blanco">{{n['name']}} # {{n['quantity']}}</h6>
+                                <p class="card-text blanco">{{n['description']}}</p>
+                                {% if n['listed'] %}
+                                <p class="blanco">{{n['listed']['fixed_amount']}} ${{blockchain['currency']}}</p>
+                                {% else %}
+                                <p class="blanco">0 ${{blockchain['currency']}}</p>
+                                {% endif %}
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
             </div>
         </div>
     </section>
@@ -291,8 +309,8 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
