--- a/api/templates/landing.html
+++ b/api/templates/landing.html
@@ -88,54 +88,47 @@
                 </div>
             </div>
             <div class="row py-5">
-                <div class="col text-center">
+                <div class="col-12 text-center pb-5">
                     <h1>Explorar, coleccionar y vender NFT</h1>
                 </div>
-                <!--  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner" style="border-radius: 1rem;">
+                            <div class="carousel-item active">
+                                <img src="https://rare-gallery.com/mocahbig/69946-Batman-DC-Comics-Terry-McGinnisBatman-Beyond-HD-Wallpaper.jpg"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://cdn.dribbble.com/users/116983/screenshots/16738624/media/9de0d2c35305956ff12b0a2f571217eb.gif"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://wywl-gifs.weebly.com/uploads/1/2/2/3/1223250/bb3.png"
+                                    class="d-block w-10 img-fluid" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://i.seadn.io/gae/u3dsZAMHTKmv_kufJ2myOspmEY16YPrPybPJ4gw_6fyz2RWzzkpFhaMQjVLhsp51VUuDF5WHHZ-8SM7uYeVVP05RBPxl15UcQl8Lf3c?auto=format&w=1920"
-                                class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item active">
-                            <img src="" class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item active">
-                            <img src="" class="d-block w-100">
-                            <div class="carousel-caption d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div> -->
-                <!-- Modal -->
+                </div>
+                <div class="col-1"></div>
             </div>
             <div class="row">
                 <div class="col-2">
@@ -179,7 +172,7 @@
                 {% else %}
                 <div class="col-1 my-3">
                     <a href="/profile/{{x['_id']}}">
-                        <img src="{{['image_url']}}" style="border-radius: 10px;" height="75rem" width="80rem">
+                        <img src="{{x['image']}}" style="border-radius: 10px;" height="75rem" width="80rem">
                     </a>
                 </div>
                 {% endif %}
@@ -291,8 +284,8 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
