--- a/api/templates/nft_list_item.html
+++ b/api/templates/nft_list_item.html
@@ -46,28 +46,17 @@
 
 <body>
     <section class="negro blanco pb-5">
-        {% if mensaje %}
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="alert alert-danger" role="alert">
-                        {{mensaje}}
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endif %}
         <div class="container-fluid">
             <div class="row py-2">
                 <div class="col-12">
                     <nav class="navbar">
                         <div class="col-1 d-flex">
-                            <a href="/">
+                            <a href="/landing">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/OpenSea_icon.svg/2048px-OpenSea_icon.svg.png"
                                     height="40px" width="40px">
                             </a>
                             <div class="col-1 pt-2 px-2">
-                                <a href="/" class="text-decoration-none">
+                                <a href="/landing" class="text-decoration-none">
                                     <h5 class="blanco">OpenSea</h5>
                                 </a>
                             </div>
@@ -77,7 +66,7 @@
                             <input class="form-control me-2 negro blanco" type="search"
                                 placeholder="Buscar artículos, colecciones y cuentas" aria-label="Search">
                         </div>
-                        <a class="navbar-brand pt-2" href="#">
+                        <a class="navbar-brand pt-2" href="/landing">
                             <h6 class="blanco">Explorar</h6>
                         </a>
                         <a class="navbar-brand pt-2" href="#">
@@ -100,6 +89,50 @@
                     </nav>
                 </div>
             </div>
+            {% if mensaje1 %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-light" role="alert">
+                            {{mensaje1}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% if mensaje2 %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-light" role="alert">
+                            {{mensaje2}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% if mensaje3 %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-light" role="alert">
+                            {{mensaje3}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% if mensaje4 %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-light" role="alert">
+                            {{mensaje4}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
             <div class="row">
                 <div class="col-3"></div>
                 <form class="col-3 py-5" action="/nft/list/action/{{nft['_id']}}">
@@ -110,12 +143,11 @@
                             </a>
                         </div>
                         <div class="col-7 pb-3">
-                            <h3>Listar para venta</h3>
-                            <br>
+                            <h3>Listar item</h3>
                             <small class="azul">* Campos obligatorios</small>
                         </div>
                     </div>
-                    <h5 class="pb-3">Escoge un tipo de venta</h5>
+                    <h5 class="pb-3 azul">Escoge un tipo de venta</h5>
                     <div class="col cuadrados py-3" style="border-radius: 1rem;">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="fixed" value="fixed" id="reverseCheck1">
@@ -143,7 +175,7 @@
                     </div>
                     <hr>
                     <div class="col">
-                        <h5 class="pb-3">Escoge un método de subasta</h5>
+                        <h5 class="pb-3">Ó escoge un método de subasta</h5>
                         <div class="col cuadrados py-3" style="border-radius: 1rem;">
                             <div class="form-check negro blanco">
                                 <input class="form-check-input" type="radio" name="high_price" value="high_price"
@@ -167,7 +199,7 @@
                             </div>
                         </div>
                         <div class="col py-3">
-                            <h5>Establecer Precio de subasta</h5>
+                            <h5>Establecer base de ofertas</h5>
                             <p>Precio inicial *</p>
                             <div class="input-group">
                                 <input type="text" class="form-control negro blanco" aria-label="" placeholder="Amount"
@@ -209,7 +241,7 @@
                         </select>
                     </div>
                     <div class="col py-3">
-                        <h5>Más Opciones</h5>
+                        <h5 class="azul">Más Opciones</h5>
                         <div class="form-check form-switch pb-3">
                             <input class="form-check-input" type="checkbox" name="reserved_item" role="switch"
                                 id="flexSwitchCheckDefault">
@@ -220,7 +252,9 @@
                                 listado</small>
                         </div>
                         <input type="text" class="form-control negro blanco" aria-label=""
-                            placeholder="Ingrese el ID de wallet del usuario" name="reserved_buyer_id">
+                            placeholder="Ingrese el nombre de usuario o email" name="reserved_name">
+                        <br>
+                        <small class="text-secondary">(Incluyendo espacios y mayúsculas)</small>
                     </div>
                     <h5>Sumario</h5>
                     <div class="col d-flex">
@@ -253,7 +287,7 @@
                         <img src="{{nft['image_url']}}" class="card-img-top" style="border-radius: 0.5rem;">
                         <div class="card-body">
                             <h6 class="card-title blanco">{{nft['name']}} # {{nft['quantity']}}</h6>
-                            <p class="blanco">{{nft['nft_value']}} {{nft['currency']}}</p>
+                            <p class="blanco">Blockchain elegida: ${{blockchain['currency']}}</p>
                         </div>
                     </div>
                 </div>
