--- a/api/templates/user_offer.html
+++ b/api/templates/user_offer.html
@@ -55,12 +55,12 @@
                 <div class="col-12">
                     <nav class="navbar">
                         <div class="col-1 d-flex">
-                            <a href="/">
+                            <a href="/landing">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/OpenSea_icon.svg/2048px-OpenSea_icon.svg.png"
                                     height="40px" width="40px">
                             </a>
                             <div class="col-1 pt-2 px-2">
-                                <a href="/" class="text-decoration-none">
+                                <a href="/landing" class="text-decoration-none">
                                     <h5 class="blanco">OpenSea</h5>
                                 </a>
                             </div>
@@ -97,7 +97,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <div class="alert alert-warning" role="alert">
+                        <div class="alert alert-light" role="alert">
                             {{mensaje1}}
                         </div>
                     </div>
@@ -121,17 +121,6 @@
                     <div class="col-12">
                         <div class="alert alert-danger" role="alert">
                             {{mensaje4}}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endif %}
-            {% if mensaje5 %}
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="alert alert-danger" role="alert">
-                            {{mensaje5}}
                         </div>
                     </div>
                 </div>
